<resources>



<!-- Titles/Headers that will displayed within the pages/fragments-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">Main</string>
    <string name="mainButton">Artist Page</string>
    <string name="featureArtist">Featured Artist</string>
    <string name="title_activity_add_cart">Confirmation</string>
    <string name="title_activity_cart_review">Cart</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_checkout">Checkout</string>


    <string name="aboutTitle">Viaduct Gallery</string>

    <string name="aboutText">The Des Moines Social Club’s Viaduct Gallery, sponsored in part by Grand View University, is Des Moines’ newest visual art home; exhibiting works by emerging local, regional, national, and international artists.
    Committed to supporting artists and creating opportunities to enhance the art scene in Des Moines, the Viaduct Gallery connects the community with progressive and dynamic art of all mediums.
    The 1,800+ square foot space is located on the first floor of the Des Moines Social Club, adjacent to Capes Kafé and Malo Restaurant.</string>

    <string name="aboutContactTitle">Contact Us</string>
    <string name="aboutContact1">Want to submit your work?</string>
    <string name="aboutContact2">Contact us at:  info@desmoinessocialclub.org</string>
    <string name="aboutContact3">900 Mulberry Street</string>
    <string name="aboutContact4">Des Moines, Iowa 50309</string>
    <string name="aboutContact5">515-369-3672</string>
    <string name="space"> </string>


<!-- Text for artist bio page-->
    <string name="artistBio">Farmivále consists of multiple transformed and redesigned carnival
        games intended to provoke conversation and encourage participation in local culture.</string>
    <string name="artistBar">work for sale</string>


    <!-- Titles that will be displayed at the top of each page-->
    <string name="app_name">Viaduct Gallery</string>
    <string name="hello_fragment1">Welcome to the Viaduct Gallery</string>
    <string name="hello_fragment2">Viaduct Artist Page</string>
    <string name="hello_fragment3">Viaduct Shop</string>
    <string name="hello_blank_fragment4">About Us</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="title_activity_shop">ShopActivity</string>


    <!-- Major text for the different pages and fragments -->
    <string name="mainBar">current exhibit</string>
    <string name="mainHeader">Farmivále</string>

    <string name="mainText">Farmivále consists of multiple transformed and redesigned carnival
        games intended to provoke conversation and encourage participation in local culture.</string>

    <string name="mainQuote">Lyndsay Niessen is a Des Moines artist
        that specializes in street art related to social issues.</string>

    <string name="hours">Opening Reception:  July 10th, 7-10pm</string>
    <string name="hours2">Artist Talk: July 13th, 7 pm</string>


<!-- shop activity page-->
    <string name="shopBio">Farmivále consists of multiple transformed and redesigned carnival
        games intended to provoke conversation and encourage participation in local culture.</string>

    <string name="shopTitle">Graffiti Girl</string>
    <string name="shopArtist">Lindsay Nissen</string>
    <string name="shopBar">product info</string>
    <string name="shopLocation">Des Moines, Iowa</string>
    <string name="shopType">Painting</string>
    <string name="shopMaterial">Spray Paint</string>
    <string name="shopDimension">H: 10\'  W: 10\'</string>
    <string name="shopPrice">$80</string>


<!-- AddCart activity-->
    <string name="addCart">Successfuly added to cart!</string>


<!-- cart review activity -->
    <string name="cartItem">item</string>
    <string name="cartPrice">price</string>
    <string name="itemName">Graffiti Girl</string>
    <string name="itemArtist">Lindsay Nissen</string>
    <string name="itemQuantity">Quantity: 1</string>
    <string name="itemPrice">$80</string>
    <string name="total">TOTAL: $80</string>


<!-- Array for the images used in the shop fragment-->
    <string-array name="shopImage">
        <item>@drawable/shop1</item>
        <item>@drawable/shop2</item>
        <item>@drawable/shop3</item>
        <item>@drawable/shop4</item>
        <item>@drawable/shop5</item>
        <item>@drawable/shop6</item>
        <item>@drawable/shop7</item>
        <item>@drawable/shop8</item>
        <item>@drawable/shop9</item>
        <item>@drawable/shop10</item>
        <item>@drawable/shop11</item>
        <item>@drawable/shop12</item>
        <item>@drawable/shop13</item>
        <item>@drawable/shop14</item>
        <item>@drawable/shop15</item>
    </string-array>

    <string-array name="shopPrice">
        <item>80</item>
        <item>90</item>
        <item>50</item>
        <item>80</item>
        <item>90</item>
        <item>80</item>
        <item>50</item>
        <item>90</item>
        <item>40</item>
        <item>90</item>
        <item>90</item>
        <item>40</item>
        <item>90</item>
        <item>90</item>
        <item>40</item>
    </string-array>

    <string-array name="shopName">
        <item>Lyndsay Nissen</item>
        <item>Lyndsay Nissen</item>
        <item>Lyndsay Nissen</item>
        <item>Alex Petersono</item>
        <item>Alex Petersono</item>
        <item>Lyndsay Nissen</item>
        <item>Lyndsay Nissen</item>
        <item>Janelle McCarthy</item>
        <item>Janelle McCarthy</item>
        <item>Steven Smith</item>
        <item>Lyndsay Nissen</item>
        <item>Steven Smith</item>
        <item>Lyndsay Nissen</item>
        <item>Samantha Brown</item>
        <item>Eric Michael</item>
    </string-array>

    <string-array name="shopMedia">
        <item>Painting</item>
        <item>Painting</item>
        <item>Painting</item>
        <item>Sculpture</item>
        <item>Sculpture</item>
        <item>Painting</item>
        <item>Painting</item>
        <item>Painting</item>
        <item>Painting</item>
        <item>Photography</item>
        <item>Painting</item>
        <item>Photography</item>
        <item>Painting</item>
        <item>Jewelery</item>
        <item>Sculpture</item>
    </string-array>


    <!-- array used for the images in the artist fragment-->
    <string-array name="artistImage">
        <item>@drawable/artist1</item>
        <item>@drawable/artist2</item>
        <item>@drawable/artist3</item>
        <item>@drawable/artist4</item>
        <item>@drawable/artist5</item>
        <item>@drawable/artist6</item>
    </string-array>


    <!-- array used for the artist names in the artist fragment-->
    <string-array name="artistName">
        <item>Lyndsay Nissen</item>
        <item>Alex Petersono</item>
        <item>Janelle McCarthy</item>
        <item>Steven Smith</item>
        <item>Samantha Brown</item>
        <item>Eric Michael</item>
    </string-array>

    <!-- array used for the art type in the artist fragment-->
    <string-array name="artType">
        <item>\n Painting</item>
        <item>\n Sculpture</item>
        <item>\n Painting</item>
        <item>\n Photography</item>
        <item>\n Jewelry</item>
        <item>\n Sculpture</item>
    </string-array>

    <string name="hello_world">Hello world!</string>


    <string-array name="lyndsay">
        <item>@drawable/shop1</item>
        <item>@drawable/shop2</item>
        <item>@drawable/shop3</item>
        <item>@drawable/shop7</item>
        <item>@drawable/shop6</item>
        <item>@drawable/shop11</item>
        <item>@drawable/shop13</item>
        <item>@drawable/art1</item>
        <item>@drawable/art3</item>
    </string-array>



    <string name="billing">billing</string>
    <string name="card_info">card info</string>
    <string name="shipping">shipping</string>
    <string name="title_activity_confirmation">confirmation</string>
    <string name="thankyouText">Thank you for your order!</string>
    <string name="orderText">You will recieve your confirmation email shortly!</string>





</resources>
