<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:weightSum="1">


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:id="@+id/mainViewFlipper"
        android:layout_gravity="center_horizontal">
    </ViewFlipper>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/barBackground"
            android:textColor="@color/barFont"
            android:text="@string/mainBar"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:background="@color/mainBackground"
            android:textColor="@color/mainFont"
            android:text="@string/mainHeader"
            android:gravity="center"
            android:layout_below="@+id/bar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/mainText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/mainText"
            android:textSize="20sp"
            android:textColor="@color/mainFont"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:padding="25dp"
            android:background="@color/mainBackground"
            android:gravity="center"
            android:layout_below="@+id/header" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageButton"
            android:src="@drawable/artist1"
            android:contentDescription="@string/mainButton"
            android:layout_below="@+id/mainText"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:background="@color/mainBackground"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mainQuote"
            android:textColor="@color/mainFont"
            android:id="@+id/mainQoute"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageButton"
            android:layout_toEndOf="@+id/imageButton"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/mainText"
            android:layout_marginTop="15dp"
            android:background="@color/mainBackground"/>

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textSize="20sp"
            android:textColor="@color/mainFont"
            android:layout_marginTop="25dp"
            android:background="@color/mainBackground"
            android:gravity="center_vertical"
            android:layout_below="@+id/imageButton"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hours2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours2"
            android:textSize="20sp"
            android:textColor="@color/mainFont"
            android:background="@color/mainBackground"
            android:layout_below="@+id/hours"
            android:textStyle="bold"
            android:gravity="center_vertical" />

    </RelativeLayout>
</ScrollView>


</LinearLayout>
